--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   crypto: ^3.0.3
   flutter:
     sdk: flutter
+  optimus: ^0.41.2 
   flutter_launcher_icons: ^0.14.3
   freezed_annotation: ^3.0.0
   google_fonts: ^6.2.1
@@ -27,7 +28,7 @@ dev_dependencies:
   json_serializable: ^6.7.1
   freezed: ^3.0.4
   build_runner: ^2.4.6
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 flutter:
   uses-material-design: true
